# nickelpipeline

./: .gitignore  README.md  calc_fwhm_process_old.py  ccdproc_issue.py  notes.txt  reduction_files_table.tbl  requirements.txt  setup.cfg  setup.py
all_testing_code/: notes.txt
all_testing_code/test_code/astrometry/: astrometric_error_test.py  astrometry_api_test.py  plate_scale_test.py
all_testing_code/test_code/final_calibration/: combo_astro_photo_test.py
all_testing_code/test_code/fwhm_calculation/: analyze_calc_fwhm.py  analyze_calc_fwhm_double_iter.py
all_testing_code/test_code/photometry/: results.txt  starfind_ellip_test.py  starfind_test.py  test_img_test.py
all_testing_code/test_code/reduction/: ccdproc_reduction_test.py  new1.fits  readable_data.csv  reduction_files_df.csv  reduction_files_table  reduction_files_table.txt  reduction_files_table.yml  reduction_mod.ipynb  reduction_pipeline_test.py
astrometry/: astrometric_error.py  astrometry_api.py  plate_scale.py  read_fits_table.py
astrometry/graphs/: astrometric_error_arcsec.ipynb  old_astrometric_error_results.ipynb
bin_stats_analysis/: analyze_stats_double.py  analyze_stats_single.py  bias_analysis.py  display_fits.py  fits_convenience_class.py  flat_ratios.py  stats_anal.ipynb  stats_anal_double.ipynb  stats_anal_double_concise.ipynb  stats_anal_old.ipynb
convenience_funcs/: all_funcs.py  dir_nav.py  display_fits.py  fits_convenience_class.py
docs/: Makefile  astrometry.rst  basics.rst  conf.py  example.rst  index.rst  install.rst  issues.rst  make.bat  photometry.rst  sphinx_warnings.out
docs/api/: modules.rst  nickelpipeline.astrometry.astrometric_error.rst  nickelpipeline.astrometry.astrometry_api.rst  nickelpipeline.astrometry.plate_scale.rst  nickelpipeline.astrometry.rst  nickelpipeline.bin_stats_analysis.analyze_stats_double.rst  nickelpipeline.bin_stats_analysis.analyze_stats_single.rst  nickelpipeline.bin_stats_analysis.bias_analysis.rst  nickelpipeline.bin_stats_analysis.rst  nickelpipeline.convenience.conditions.rst  nickelpipeline.convenience.dir_nav.rst  nickelpipeline.convenience.display_fits.rst  nickelpipeline.convenience.fits_class.rst  nickelpipeline.convenience.graphs.rst  nickelpipeline.convenience.log.rst  nickelpipeline.convenience.nickel_data.rst  nickelpipeline.convenience.nickel_masks.rst  nickelpipeline.convenience.rst  nickelpipeline.photometry.aperture_photometry.rst  nickelpipeline.photometry.calibrate.rst  nickelpipeline.photometry.moffat_model_photutils.rst  nickelpipeline.photometry.psf_photometry.rst  nickelpipeline.photometry.rst  nickelpipeline.photometry.test_img.rst  nickelpipeline.psf_analysis.gaussian.calc_fwhm.rst  nickelpipeline.psf_analysis.gaussian.fwhm_graphs.rst  nickelpipeline.psf_analysis.gaussian.fwhm_graphs_contour.rst  nickelpipeline.psf_analysis.gaussian.rst  nickelpipeline.psf_analysis.moffat.fit_psf.rst  nickelpipeline.psf_analysis.moffat.model_psf.rst  nickelpipeline.psf_analysis.moffat.moffat_fitting.rst  nickelpipeline.psf_analysis.moffat.psf_field_and_contour.rst  nickelpipeline.psf_analysis.moffat.psf_param_graphs.rst  nickelpipeline.psf_analysis.moffat.rst  nickelpipeline.psf_analysis.moffat.stamps.rst  nickelpipeline.psf_analysis.rst  nickelpipeline.reduction.bias_subtraction.rst  nickelpipeline.reduction.correct_object_name.rst  nickelpipeline.reduction.dark_subtraction.rst  nickelpipeline.reduction.flat_division.rst  (+20 more)
examples/: all.ipynb  all.py  astrometry.ipynb  final_calib.ipynb  photometry.ipynb  presentation.py  reduction.ipynb
examples/data_example/raw/: d1001.fits  d1002.fits  d1003.fits  d1004.fits  d1005.fits  d1006.fits  d1007.fits  d1008.fits  d1009.fits  d1010.fits  d1035.fits  d1036.fits  d1037.fits  d1047.fits  d1048.fits  d1052.fits  d1059.fits  d1074.fits  d1083.fits
fwhm_calculation/: analyze_calc_fwhm.py  analyze_calc_fwhm_double_iter.py  param_analysis_data.html  param_analysis_data_double_iter.html
fwhm_calculation/old_code/: calc_fwhm_old.py  locate_spots.py
nickelpipeline/: __init__.py  version.py
nickelpipeline/astrometry/: astrometric_error.py  astrometry_api.py  nickel_data.py  plate_scale.py
nickelpipeline/bin_stats_analysis/: analyze_stats_double.py  analyze_stats_single.py  bias_analysis.py  stats_anal.ipynb  stats_anal_2.ipynb  stats_anal_double.ipynb  stats_anal_double_concise.ipynb
nickelpipeline/bin_stats_analysis/old_conv_funcs/: display_fits.py  fits_convenience_class.py  flat_ratios.py
nickelpipeline/convenience/: conditions.py  dir_nav.py  display_fits.py  fits_class.py  graphs.py  log.py  logging_config.json  nickel_data.py  nickel_masks.py
nickelpipeline/convenience_funcs/: all_funcs.py  dir_nav.py  display_fits.py  fits_convenience_class.py
nickelpipeline/final_calibration/: combo_astro_photo.py
nickelpipeline/photometry/: aperture_photometry.py  calibrate.py  make_test_img.py  moffat_model_photutils.py  photometry.py  psf_photometry.py  starfind.py  starfind_ellip.py  test_img.py
nickelpipeline/pipelines/: astrometry.py  final_calib.py  photometry.py  reduction.py
nickelpipeline/reduction/: README.md  bias_subtraction.py  flat_division.py  overscan_subtraction.py  rdx.toml  reduction.py  reduction_ccdproc.py  reduction_mod_basic.py  reduction_pipeline.py  sort.py
nickelpipeline/script_notebooks/: reduction.ipynb
nickelpipeline/scripts/: __init__.py  astrometry_pipeline.py  photometry_pipeline  photometry_pipeline.py  reduction.py  reduction_pipeline.py  scriptbase.py
psf_analysis_gaussian/: calc_fwhm.py  fwhm_graphs.py  fwhm_graphs_contour.py  reduction_mod_basic.py
psf_analysis_gaussian/graphs/: fwhm_contours.ipynb  fwhm_contours_arcsec.ipynb
psf_analysis_gaussian/reduction_files/: overscan_subtraction.py
psf_analysis_moffat/: fit_psf.py  model_psf.py  psf_field_and_contour.py  psf_param_graphs.py  stamps.py
psf_analysis_moffat/old_code/: psf.py  psf_mod.py  pypeit_funcs.py  reduce.py  reduce_mod.py  spot_analysis.py  spot_analysis_mod.py
reduction_pipeline/: bias_subtraction.py  reduction_mod.ipynb  reduction_old.ipynb  stats_anal_2.ipynb
(+19 files in other folders)
